# NodeSystem

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Network.cpp  Network.h  Network.h~  Node.cpp  Node.h  RandomNode.cpp  RandomNode.h
src/Events/: CountHandler.cpp  CountHandler.h  EventHandler.h  SumHandler.cpp  SumHandler.h
